made style changes

--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@ $(function() {
 
 <body>
 <div class="container fixedHeight">
-<header>
-<h2>Chat</h2>  
-</header>
+<header></header>
 
 <div id="chatWindow"> 
 <div id="chatContents"></div> 
-<div id="push"></div>
+
 </div>
 
 <div id="chatInput">
     <form onsubmit="buttonPressed(evt); return false">
-    <input type="textarea" id="textfield" />
+    <input type="textfield" id="textfield" />
     </form>
 </div>
 </div>
