Added favicon code

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ $user = new flexibleAccess();
 <meta charset="utf-8" />
 <title>Login</title>
 
+<link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
 
@@ -98,6 +99,7 @@ $user = new flexibleAccess();
 <meta charset="utf-8" />
 <title>Chat</title>
 
+<link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script language="javascript" type="text/javascript" src="chat.js"></script>
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
