added css BETA banner topleft

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@ $user = new flexibleAccess();
 </head>
 
 <body>
+
+<span id="corner-banner">
+	<em>beta</em>
+</span>
+
 <div id='register_box'>
   <div id='register_contents'>
     <img src="logo.png" alt="JumboChat!" id="loginLogo"/>
