added browser detection and blocking

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@ $user = new flexibleAccess();
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
 
+<script>
+	function checkBrowser() {
+		if (navigator.userAgent.indexOf('Chrome')==-1) { // not using chrome!
+			$("div").find("#register_form").css('display','none');
+			$("div").find("#login_info").html("Welcome to JumboChat! We're sorry, but your browser is currently unsupported.");
+		}	
+	}
+	window.addEventListener("load", checkBrowser, false); 
+</script>
+
 </head>
 
 <body>
