--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@ $user = new flexibleAccess();
 	window.addEventListener("load", checkBrowser, false); 
 </script>
 
+<script type="text/javascript">
+  // Analytics
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28731705-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
 
 <body>
@@ -141,6 +155,20 @@ $(function() {
     body.css("margin-top", head.height()).css("margin-bottom", foot.height());      
    });   
  });
+
+</script>
+
+<script type="text/javascript">
+  // Analytics
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28731705-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 
 </script>
 
