added info page content with css

--- a/info.html
+++ b/info.html
@@ -1,1 +1,79 @@
-infooo
+<!DOCTYPE html>
+
+<head>
+<meta charset="utf-8" />
+<title>JumboChat Info</title>
+
+<link rel="icon" type="image/png" href="./favicon.png">
+<link rel="stylesheet" type="text/css" href="info.css" media="screen" />
+
+<script type="text/javascript">
+  // Analytics
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28731705-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</head>
+
+<body>
+<h1 id="welcometojumbochat">Welcome to JumboChat!</h1>
+<h2 id="whatitis">What it is</h2>
+
+<p>JumboChat is an anonymous chat service just for people at Tufts University. When a chat session starts, you will be randomly paired with another person who also wants to chat. (These pairings aren&#8217;t <em>truly</em> random, they are just merely coincidental.) </p>
+
+<p>In order to use JumboChat you must provide an email address that ends with &#8220;@tufts.edu&#8221;. This is merely for authentication purposes, and your email will not be associated with any chat sessions that you may have. In fact, any kind of personal information will not be displayed at any time.</p>
+
+<h2 id="missionstatement">Mission Statement</h2>
+
+<p>There are many anonymous chat services out there in the internet, and they work just fine! But it&#8217;s hard for two people from completely different places (both geographical and metaphysical) to talk about things of substance. JumboChat reduces the scope of anonymous chatting to a single university. We believe that this will create a <em>potential</em> for truly groundbreaking conversations. People will get the chance to talk about what they really feel or who they really are, without having to suffer any social consequences. </p>
+
+<p>At JumboChat, we know that this service will also probably be used many people who are looking for conversations that are, <em>ahem</em>, not that groundbreaking, and that&#8217;s fine! JumboChat is here to help people express themselves in any way, shape, form, or direction. </p>
+
+<p>We value free speech over everything else and abhor taboos of any kind.</p>
+
+<h2 id="termsofservice">Terms of Service</h2>
+
+<p>You may use JumboChat (&#8220;the service&#8221;) only if you always comply with these Terms of Service and all university, local, state, national, and international laws and regulaitons that may apply. The Terms of Service and Privacy Policy may change at any time.</p>
+
+<h3 id="whocanusejumbochat">Who can use JumboChat</h3>
+
+<p>Students at Tufts University are the only ones who are allowed to use this service.</p>
+
+<h3 id="passwords">Passwords</h3>
+
+<p>You are responsible for the safekeeping of your account information such as email and password. This means that you will keep this information safe and you will not hand out your login information out to anyone. Allowing other people (especially people who are not from Tufts) to use your account may result in dangerous or unfortunate situations for many people. </p>
+
+<p>Don&#8217;t hand out your login information to ANYONE.</p>
+
+<h3 id="limitationofliability">Limitation of Liability</h3>
+
+<p>JumboChat is not responsible for the chats (&#8220;the content&#8221;) created by people who use the service. </p>
+
+<h3 id="talkingtostrangers">Talking to Strangers</h3>
+
+<p>Everybody lies. </p>
+
+<h3 id="dontbeanidiot">Don&#8217;t be an Idiot</h3>
+
+<p>Be nice and be respectful of others.</p>
+
+<h2 id="privacypolicy">Privacy Policy</h2>
+
+<p>We will give out whatever information we have (user accounts, server logs) to law enforcement or other parties if they present the necessary legal documents to get a copy of the data.</p>
+
+<p>We do not keep records of chats.</p>
+
+<hr />
+
+<div id="contact"><p><em>Please email me with your comments or questions at: jmonte03 [at] cs.tufts.edu</em></p></div>
+
+</body>
+</html>
