updated about and terms links

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ $user = new flexibleAccess();
   </div>
   
   <div id="login_info">Use your '@tufts.edu' email to log in. If this is your first time here, then enter your email and a password and you will be registered with that info.</div>
-  <div id="contact"><a href="info.html">Questions?</a></div>
+  <div id="contact"><a href="info.html">About</a> - <a href="info.html#termsofservice">Terms</a></div>
 </div>
 </body>
 
