--- a/info.html
+++ b/info.html
@@ -43,7 +43,7 @@
 
 <p>You may use JumboChat (&#8220;the service&#8221;) only if you always comply with these Terms of Service and all university, local, state, national, and international laws and regulaitons that may apply. The Terms of Service and Privacy Policy may change at any time.</p>
 
-<h3 id="whocanusejumbochat">Who can use JumboChat</h3>
+<h3 id="whocanusejumbochat">Who can use JumboChat?</h3>
 
 <p>Students at Tufts University are the only ones who are allowed to use this service.</p>
 
@@ -67,7 +67,7 @@
 
 <h2 id="privacypolicy">Privacy Policy</h2>
 
-<p>We will give out whatever information we have (user accounts, server logs) to law enforcement or other parties if they present the necessary legal documents to get a copy of the data.</p>
+<p>We will give out whatever information we have (user accounts, server logs) to law enforcement or other parties if they present the necessary legal documents to get a copy of whatever data they want.</p>
 
 <p>We do not keep records of chats.</p>
 
