--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ $(function() {
  
 $(document).keyup(function(e) {
 	if (e.keyCode == 27) { //esc
-		disconnect();
+		isConnected ? disconnect() : reconnect();
 	}
 });
 
