--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ $user = new flexibleAccess();
 
 <link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<script language="javascript" type="text/javascript" src="chat.js"></script>
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+<script language="javascript" type="text/javascript" src="chat.js"></script>
 
 <script>
 
@@ -205,7 +205,7 @@ $(document).keyup(function(e) {
 
 <div id="chatInput">
     <form onsubmit="buttonPressed(evt); return false">
-    <input type="textfield" id="textfield" />
+    <input type="textfield" id="textfield" onkeyup="textfieldChanged(this.value.length)"/>
     </form>
 </div>
 </div>
