changed stranger to jumbo

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ $(document).keyup(function(e) {
 </div>
 </div>
 
-<div id="typingIndicatorHidden">Stranger is Typing…</div>
+<div id="typingIndicatorHidden">Jumbo is Typing…</div>
 
 </body>
 
