Added unread message notification to browser window

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ $user = new flexibleAccess();
 
 <head>
 <meta charset="utf-8" />
-<title>Login</title>
+<title>JumboChat Login</title>
 
 <link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -98,6 +98,7 @@ $user = new flexibleAccess();
 			$("div").find("#login_info").html("Welcome to JumboChat! We're sorry, but your browser is currently unsupported.");
 		}	
 	}
+	
 	window.addEventListener("load", checkBrowser, false); 
 </script>
 
@@ -148,7 +149,7 @@ $user = new flexibleAccess();
 
 <head>
 <meta charset="utf-8" />
-<title>Chat</title>
+<title>JumboChat</title>
 
 <link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
