--- a/info.html
+++ b/info.html
@@ -71,6 +71,10 @@
 
 <p>We do not keep records of chats.</p>
 
+<h2 id="help">Help</h2>
+
+<p>To reset your password, or if you have any requests, please email me at jmonte03 [at] cs.tufts.edu.</p>
+
 <hr />
 
 <div id="contact"><p><em>Please email me with your comments or questions at: jmonte03 [at] cs.tufts.edu</em></p></div>
