--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@ $user = new flexibleAccess();
 <body>
 
 <span id="corner-banner">
-	<em>beta</em>
+	<em>love beta</em>
 </span>
+
+<div id='heart'></div>
 
 <div id='register_box'>
   <div id='register_contents'>
@@ -139,7 +141,7 @@ $user = new flexibleAccess();
   </div>
   
   <div id="login_info">Use your '@tufts.edu' email to log in. If this is your first time here, then enter your email and a password and you will be registered with that info.</div>
-  <div id="contact"><a href="info.html">About</a> - <a href="info.html#termsofservice">Terms</a></div>
+  <div id="contact"><a href="info.html">About</a> - <a href="info.html#termsofservice">Terms</a> - <a href="info.html#help">Help</a></div>
 </div>
 </body>
 
