--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $user = new flexibleAccess();
 
 <link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
 
 <script>
 	function checkBrowser() {
@@ -155,7 +155,7 @@ $user = new flexibleAccess();
 
 <link rel="icon" type="image/png" href="./favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
 <script language="javascript" type="text/javascript" src="sound.js"></script>
 <script language="javascript" type="text/javascript" src="chat.js"></script>
 
