bring banner to front

--- a/index.html
+++ b/index.html
@@ -120,10 +120,6 @@ $user = new flexibleAccess();
 
 <body>
 
-<span id="corner-banner">
-	<em>love beta</em>
-</span>
-
 <div id='heart'></div>
 
 <div id='register_box'>
@@ -143,6 +139,9 @@ $user = new flexibleAccess();
   <div id="login_info">Use your '@tufts.edu' email to log in. If this is your first time here, then enter your email and a password and you will be registered with that info.</div>
   <div id="contact"><a href="info.html">About</a> - <a href="info.html#termsofservice">Terms</a> - <a href="info.html#help">Help</a></div>
 </div>
+
+<span id="corner-banner"><em>love beta</em></span>
+
 </body>
 
 <?php
