--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ $user = new flexibleAccess();
 
 <body>
 
-<div id='heart'></div>
+<div id='image'></div>
 
 <div id='register_box'>
   <div id='register_contents'>
@@ -140,7 +140,7 @@ $user = new flexibleAccess();
   <div id="contact"><a href="info.html">About</a> - <a href="info.html#termsofservice">Terms</a> - <a href="info.html#help">Help</a></div>
 </div>
 
-<span id="corner-banner"><em>love beta</em></span>
+<span id="corner-banner"><em>beta</em></span>
 
 </body>
 
